--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://redprakash.github.io/deploy-devilswear",
+  "homepage": "http://redprakash.github.io/devils-wear",
   "name": "ecommerce",
   "version": "0.1.0",
   "private": true,
